@@ -1,7 +1,7 @@
-# /var/cache/linuxmuster/prepare.ini
+# /var/lib/linuxmuster/prepare.ini
 #
 # thomas@linuxmuster.net
-# 20180128
+# 20180417
 #
 # basic network settings from linuxmuster-prepare.py
 #
