@@ -1,3 +1,9 @@
+linuxmuster-prepare (0.4.5-0ubuntu0) lmn7-testing; urgency=low
+
+  * moved prepare.ini to /var/lib/linuxmuster.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 17 Apr 2018 16:47:00 +0200
+
 linuxmuster-prepare (0.4.4-0ubuntu0) lmn7-testing; urgency=low
 
   * fixed netplan configfuration.
